add generate token handler
