# pkg/models/auth.go
@@ -1,0 +1,5 @@
+package models
+
+type AuthSignInResp200 struct {
+	AccessToken string `json:"access_token"`
+}
